@@ -7,8 +7,9 @@
   compatibility aliases, functions, macros and variables are installed.
 - Remove deprecated, prefixed compatibility functions.
 - Remove deprecated features ~compat-help~, ~compat-font-lock~ and ~compat-24~.
-- Compat will check that the Emacs version which was used to compile Compat
-  equals the Emacs version at runtime.
+- Compat uses runtime checks (boundp, fboundp) to ensure that existing
+  definitions are never overridden, when Compat is loaded on a newer Emacs than
+  it was compiled on.
 
 * Release of "Compat" Version 29.1.0.1
 
